--- a/strings/strings/id.yml
+++ b/strings/strings/id.yml
@@ -140,7 +140,7 @@ riz_1: "ʌʏꝛᴀ ꭙ ᴜꜱᴇꝛʙᴏᴛ "
 inline_1: "**◈ {}\n\n๏ Modul : {}**"
 inline_2: "**◈ {}\n\n๏ Tambahan : {}**"
 inline_3: "**◈ {}\n\n๏ Tambahan : {}\n\n Ketik `.setdb ADDONS True` Kemudian Restart.**"
-inline_4: "**◈ {}\n\n๏ Inline Menu \n\n Modul : {}\n Tambahan : {}\n Perintah : {}**"
+inline_4: "**◈ {}\n\n๏ Inline Menu \n\n Modul : {}\n Perintah : {}**"
 inline_5: "**Menu Di Tutup**"
 inline_6: "**Menu Bantuan untuk Voice Chat {}**\n**Perintah yang tersedia:** `{}`\n\nʌʏꝛᴀ ꭙ ᴜꜱᴇꝛʙᴏᴛ"
 inline_7: "Ketik `.help {}` untuk mendapatkan daftar perintah."
