--- a/requirements.txt
+++ b/requirements.txt
@@ -53,3 +53,21 @@ git+https://github.com/xditya/telegraph.git@41fd800#egg=telegraph
 tgcrypto
 youtube-search-python
 yt-dlp
+covid
+emoji
+fonttools
+gtts
+gingerit
+jikanpy
+git+https://github.com/New-dev0/AsyncLyricsExtractor.git
+phlogo
+pokedex.py
+pyfiglet
+pygments
+pyjokes
+quotefancy
+shazamio
+speechrecognition
+speedtest-cli
+textblob
+wikipedia
