--- a/requirements.txt
+++ b/requirements.txt
@@ -29,7 +29,9 @@ py-Ayra
 akinator
 apscheduler
 aiohttp
+beautifulsoup4
 bs4
+colour
 enhancer>=0.3.4
 git+https://github.com/New-dev0/instagrapi.git@39df1b1#egg=instagrapi
 git+https://github.com/buddhhu/img2html.git@c44170d#egg=img2html
