--- a/app.json
+++ b/app.json
@@ -43,7 +43,7 @@
         }
     },
     "formation": {
-        "ayra": {
+        "worker": {
             "quantity": 1,
             "size": "basic"
         }
