--- a/strings/strings/id.yml
+++ b/strings/strings/id.yml
@@ -575,3 +575,27 @@ vcbot_19: "Sudah Mengotentikasi Obrolan Ini!"
 vcbot_20: "`Mengunduh dan mengonversi...`"
 vcbot_21: "• Tidak ada dalam antrian!"
 vcbot_22: "`Grup ini telah dihapus dari antrian!`"
+
+
+# updater tools
+upd_1: "`Memeriksa pembaruan, harap tunggu....`"
+upd_2: "`Oops.. Pembaruan tidak dapat dilanjutkan karena beberapa masalah.`\n\n**LOGTRACE:**\n"
+upd_3: "**✧ Tersedia Pembaruan Untuk [{}] \n\n✧ Pembaruan:**\n\n{}\n"
+upd_4: "**Changelog terlalu besar, dikirim sebagai file.**"
+upd_5: "{}\n**Kredensial Heroku tidak valid untuk deploy Kazu-Userbot dyno.**"
+upd_6: "**[HEROKU]: Harap Tambahkan Variabel** `HEROKU_APP_NAME` **untuk deploy perubahan terbaru dari Userbot.**"
+upd_7: "{}\n**Terjadi Kesalahan Di Log:**\n`{}`"
+upd_8: "**Pembaruan Gagal!** `Dibatalkan karena ada beberapa kesalahan.`"
+upd_9: "**✧ 𝙰𝚈𝚁𝙰-𝚄𝚂𝙴𝚁𝙱𝙾𝚃 ✧** `Berhasil Di {} Userbot bisa di gunakan kembali.`"
+upd_10: "{}\n**Kegagalan awal!** `{}`"
+upd_11: "**Sayangnya, Directory {} Tampaknya Bukan Dari Repo. Tapi Kita Bisa Memperbarui Paksa Userbot Menggunakan** `{}update deploy`"
+upd_12: "**[HEROKU]: Harap Tambahkan Variabel** `HEROKU_API_KEY`"
+upd_13: "**✧ 𝙰𝚈𝚁𝙰-𝚄𝚂𝙴𝚁𝙱𝙾𝚃 ✧ Sudah Versi Terbaru**"
+upd_14: "`[HEROKU]: Update Deploy ✧ 𝙰𝚈𝚁𝙰-𝚄𝚂𝙴𝚁𝙱𝙾𝚃 ✧ Sedang Dalam Proses...`"
+upd_15: "**Perfoming a quick update, please wait...**"
+upd_16: "**Sinkronisasi Paksa Ke Kode Userbot Terbaru, Harap Tunggu...**"
+upd_17: "**Ketik** `{}update deploy` **Untuk Mengupdate ✧ 𝙰𝚈𝚁𝙰-𝚄𝚂𝙴𝚁𝙱𝙾𝚃 ✧**"
+upd_18: "**Quick update telah dinonaktifkan untuk pembaruan ini. Gunakan** `{}update deploy` **sebagai gantinya.**"
+upd_19: "{}\n**Direktori** `{}` **Tidak Dapat Di Temukan.**"
+upd_20: "**[•]** - Proses Update\n✧ 𝙰𝚈𝚁𝙰-𝚄𝚂𝙴𝚁𝙱𝙾𝚃 ✧ : `{}`"
+upd_21: "**[•]** - Proses Update\n✧ 𝙰𝚈𝚁𝙰-𝚄𝚂𝙴𝚁𝙱𝙾𝚃 ✧ : `Menginstall Pembaruan...`"
