--- a/strings/strings/id.yml
+++ b/strings/strings/id.yml
@@ -148,11 +148,11 @@ autopic_4: "AUTOPIC tidak digunakan !!"
 autopic_5: "AUTOPIC Berhenti!"
 
 # inline
-riz_1: "**© @KynanSupport**"
-inline_1: "**◈ {}\n\n๏ Help Inline Modul : {}**"
-inline_2: "**◈ {}\n\n๏ Tambahan : {}**"
-inline_3: "**◈ {}\n\n๏ Tambahan : {}\n\n Ketik `.setdb ADDONS True` Kemudian Restart.**"
-inline_4: "**◈ {}\n\n๏ Help Inline Menu \n\n Modul : {}\n Perintah : {}**"
+riz_1: "**𝙰𝚈𝚁𝙰-𝚄𝚂𝙴𝚁𝙱𝙾𝚃**"
+inline_1: "**{}\n\n๏ Help Inline Modul : {}**"
+inline_2: "**{}\n\n๏ Tambahan : {}**"
+inline_3: "**{}\n\n๏ Tambahan : {}\n\n Ketik `.setdb ADDONS True` Kemudian Restart.**"
+inline_4: "**{}\n\n๏ Help Inline Menu \n\n Modul : {}\n Perintah : {}**"
 inline_5: "**Menu Di Tutup**"
 inline_6: "**Menu Bantuan untuk Voice Chat {}**\n**Perintah yang tersedia:** `{}`\n\nʌʏꝛᴀ ꭙ ᴜꜱᴇꝛʙᴏᴛ"
 inline_7: "Ketik `.help {}` untuk mendapatkan daftar perintah."
