--- a/requirements.txt
+++ b/requirements.txt
@@ -51,6 +51,7 @@ pytz
 qrcode
 requests
 tabulate
+wget
 git+https://github.com/xditya/telegraph.git@41fd800#egg=telegraph
 tgcrypto
 youtube-search-python
