--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ openai
 https://github.com/New-dev0/Telethon/archive/diamond.zip
 python-decouple
 pymongo
+httpx
 python-dotenv
 pytgcalls==3.0.0.dev22
 covid
