--- a/app.json
+++ b/app.json
@@ -25,11 +25,13 @@
         },
         "REDIS_PASSWORD": {
             "description": "Wajib Isi",
-            "value": ""
+            "value": "",
+            "required": false
         },
         "REDIS_URI": {
             "description": "Wajib Isi",
-            "value": ""
+            "value": "",
+            "required": false
         },
         "SESSION": {
             "description": "Session String (telethon or pyrogram) for your telegram user account. The userbot will NOT work without a session string!!",
