--- a/strings/strings/id.yml
+++ b/strings/strings/id.yml
@@ -157,10 +157,10 @@ autopic_5: "AUTOPIC Berhenti!"
 
 # inline
 riz_1: "**𝙰𝚈𝚁𝙰-𝚄𝚂𝙴𝚁𝙱𝙾𝚃**"
-inline_1: "**❏ Menu Bantuan Fitur**\n**╰ Prefix :** {}"
+inline_1: "**❏ Menu Bantuan Fitur**\n**╰ Prefix :** {i}"
 inline_2: "**{}\n\n๏ Tambahan : {}**"
 inline_3: "**{}\n\n๏ Tambahan : {}\n\n Ketik `.setdb ADDONS True` Kemudian Restart.**"
-inline_4: "**❏ Menu Bantuan**\n**├ Fitur :** {}\n**╰ Prefix :** {}"
+inline_4: "**❏ Menu Bantuan**\n**├ Fitur :** {}\n**╰ Perintah :** {}"
 inline_5: "**Menu Di Tutup**"
 inline_6: "**Menu Bantuan untuk Voice Chat {}**\n**Perintah yang tersedia:** `{}`\n\nʌʏꝛᴀ ꭙ ᴜꜱᴇꝛʙᴏᴛ"
 inline_7: "Ketik `.help {}` untuk mendapatkan daftar perintah."
