--- a/strings/strings/id.yml
+++ b/strings/strings/id.yml
@@ -160,7 +160,7 @@ riz_1: "**𝙰𝚈𝚁𝙰-𝚄𝚂𝙴𝚁𝙱𝙾𝚃**"
 inline_1: "**❏ Menu Bantuan Fitur**\n**╰ Prefix :** {}"
 inline_2: "**{}\n\n๏ Tambahan : {}**"
 inline_3: "**{}\n\n๏ Tambahan : {}\n\n Ketik `.setdb ADDONS True` Kemudian Restart.**"
-inline_4: "**❏ Menu Bantuan**\n**├ Fitur :** {}\n**╰ Perintah :** {}"
+inline_4: "**❏ {}**\n**├ Inline Help Modules**\n**├ Fiture :** {}\n**╰ Commands :** {}"
 inline_5: "**Menu Di Tutup**"
 inline_6: "**Menu Bantuan untuk Voice Chat {}**\n**Perintah yang tersedia:** `{}`\n\nʌʏꝛᴀ ꭙ ᴜꜱᴇꝛʙᴏᴛ"
 inline_7: "Ketik `.help {}` untuk mendapatkan daftar perintah."
