--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
     ],
     "repository": "https://github.com/naya1503/Naya-Userbot",
     "success_url": "https://t.me/rizzvbss",
-    "stack": "container",
+    "stack": "heroku-22",
     "env": {
         "API_ID": {
             "description": "You api id, from my.telegram.org or @ScrapperRoBot.",
@@ -17,16 +17,6 @@
         },
         "API_HASH": {
             "description": "You api hash, from my.telegram.org or @ScrapperRoBot.",
-            "value": "",
-            "required": false
-        },
-        "REDIS_PASSWORD": {
-            "description": "Wajib Isi",
-            "value": "",
-            "required": false
-        },
-        "REDIS_URI": {
-            "description": "Wajib Isi",
             "value": "",
             "required": false
         },
