--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
     "name": "Naya UserBot",
-    "description": "Ayra Userbot Dibuat Untuk String Telethon Dan Pyrogram Untuk ID 5 Pasti Aman.",
+    "description": "Naya Userbot Dibuat Untuk String Telethon Dan Pyrogram Untuk ID 5 Pasti Aman.",
     "logo": "https://graph.org/file/60408fea8439e6702674d.jpg",
     "keywords": [
         "Telethon",
