--- a/app.json
+++ b/app.json
@@ -11,28 +11,25 @@
     "stack": "heroku-22",
     "env": {
         "API_ID": {
-            "description": "You api id, from my.telegram.org or @ScrapperRoBot.",
-            "value": "", 
-            "required": false
+            "description": "Au ya cek my.telegram.org",
+            "required": true
         },
         "API_HASH": {
-            "description": "You api hash, from my.telegram.org or @ScrapperRoBot.",
-            "value": "",
-            "required": false
+            "description": "Au ya cek my.telegram.org",
+            "required": true
         },
         "SESSION": {
-            "description": "Session String (telethon or pyrogram) for your telegram user account. The userbot will NOT work without a session string!!",
+            "description": "Silakan isi Telethon Atau Pyrogram V2",
             "value": ""
         },
         "HEROKU_API": {
-            "description": "Heroku API token. Mandatory for Heroku Deploy...",
-            "value": "",
-            "required": false
+            "description": "Isi Coy Jan Dikosongin.",
+            "required": true
         },
         "HEROKU_APP_NAME": {
-            "description": "Name of your Heroku app, given in the first blank on this page. To be added if deploying to heroku ONLY.",
+            "description": "Isi Coy Jan Dikosongin",
             "value": "",
-            "required": false
+            "required": true
         }
     },
   "addons": [
