--- a/.github/workflows/pylint.yaml
+++ b/.github/workflows/pylint.yaml
@@ -1,45 +1,27 @@
-name: PyLint
-on:
-  push:
-    branches: [ main ]
-    paths:
-    - "**.py"
+name: Auto Fix
+on: [push]
 jobs:
-  PEP8:
+  python-auto-fix:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout Repository
+        uses: actions/checkout@v2
       - name: Setup Python
-        uses: actions/setup-python@v1
+        uses: actions/setup-python@v2
         with:
-          python-version: 3.8
-          cache: "pip"
-      - name: Install Python lint libraries
-        run: pip install autopep8 autoflake isort black
-      - name: Check for showstoppers
+          python-version: '3.x'
+      - name: Install Dependencies
         run: |
-          autopep8 --verbose --in-place --recursive --aggressive --aggressive assistant/*.py
-          autopep8 --verbose --in-place --recursive --aggressive --aggressive assistant/manager/*.py
-          autopep8 --verbose --in-place --recursive --aggressive --aggressive modules/*.py
-      - name: Remove unused imports and variables
+          python -m pip install --upgrade pip
+          pip install black isort autoflake
+          pip freeze > github-action.txt
+      - name: Auto Fix
         run: |
-          autoflake --in-place --recursive --remove-all-unused-imports --remove-unused-variables --ignore-init-module-imports assistant/*.py
-          autoflake --in-place --recursive --remove-all-unused-imports --remove-unused-variables --ignore-init-module-imports assistant/manager/*.py
-          autoflake --in-place --recursive --remove-all-unused-imports --remove-unused-variables --ignore-init-module-imports modules/*.py
-      - name: lint with isort and black
-        run: |
-          isort assistant/*.py
-          isort assistant/manager/*.py
-          black --fast assistant/*.py
-          black assistant/manager/*.py
-          isort modules/*.py
-          black --fast modules/*.py
-      - uses: stefanzweifel/git-auto-commit-action@v4
+          black --exclude=venv .
+          isort --skip-glob='**/venv/**' .
+          autoflake --in-place --recursive --remove-all-unused-imports --remove-unused-variables --ignore-init-module-imports .
+      - name: Code Analysis
+        uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          commit_message: 'pylint: auto fixes'
-          commit_options: '--no-verify'
-          repository: .
-          commit_user_name: naya1503
-          commit_user_email: emiliasayang2@gmail.com
-          commit_author: Naya <emiliasayang2@gmail.com>
-          
+          commit_message: "Auto Fix"
+          commit_options: "--no-verify"
