--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ python-decouple
 pymongo
 httpx
 python-dotenv
-pytgcalls==3.0.0.dev22
+pytgcalls==3.0.0.dev24
 covid
 fonttools
 gtts
@@ -50,7 +50,7 @@ qrcode
 requests
 tabulate
 wget
-git+https://github.com/xditya/telegraph.git@41fd800#egg=telegraph
+telegraph
 tgcrypto
 youtube-search-python
 yt-dlp
@@ -60,7 +60,6 @@ fonttools
 gtts
 gingerit
 jikanpy
-git+https://github.com/New-dev0/AsyncLyricsExtractor.git
 phlogo
 pokedex.py
 pyfiglet
