--- a/strings/strings/id.yml
+++ b/strings/strings/id.yml
@@ -7,12 +7,12 @@ authors:
   - riizz
 
 # commons
-com_1: "`Sedang Memproses...`"
-com_2: "`Sedang Mencari...`"
+com_1: "`Sedang Coli...`"
+com_2: "`Sedang Mencari jodoh...`"
 com_3: "`Yang anda Masukan Tidak Valid`"
 com_4: "`Media Tidak Didukung..`"
-com_5: "`Mengunduh...`"
-com_6: "`Mengunggah...`"
+com_5: "`lagi donglot...`"
+com_6: "`Mengocok...`"
 com_7: "`Maaf Telah Terjadi ERROR`"
 
 adzan1: "**Tidak Dapat Menemukan Kota** `{}`"
@@ -24,16 +24,16 @@ carbon_2: "`Balas Pesan atau file yang dapat dibaca..`"
 carbon_3: "`Berikan Warna Kustom untuk Membuat Carbon...`"
 
 # vc tools
-stvc_1: "**Maaf {} Bukan Admin 👮**"
-stvc_2: "`Obrolan Suara Dimulai...`"
-stvc_3: "`Obrolan Suara Dihentikan...`"
+stvc_1: "**Maaf {} Bukan sepuh 👮**"
+stvc_2: "`Obrolan Suara Dientot...`"
+stvc_3: "`Obrolan Suara telah crot...`"
 vcin_1: "`Mengundang Anggota ke Obrolan Suara...`"
 vcin_2: "`{}` **Orang Berhasil diundang ke VCG**"
 vcti_1: "**Silahkan Masukan Title Obrolan Suara Grup**"
 vcti_2: "**Berhasil Mengubah Judul VCG Menjadi** `{}`"
 jovc_1: "⍟ [{}](tg://user?id={})\n\n❏ **Berhasil Bergabung Ke Obrolan Suara**\n└ **Chat ID:** `{}`"
 jovc_2: "**[ERROR]** `Karena akun sedang berada di obrolan suara`\n\n• Silahkan coba `{}joinvc` lagi"
-levc_1: "⍟ [{}](tg://user?id={})\n\n❏ **Berhasil Turun dari Obrolan Suara**\n└ **Chat ID:** `{}`"
+levc_1: "⍟ [{}](tg://user?id={})\n\n❏ **Berhasil Turun bokep sudah habis**\n└ **Chat ID:** `{}`"
 
 # chatactions
 can_1: "**#GBanned_User** Bergabung.\n\n**User** : {}\n**Karena**: {}\n\n`Pengguna dibanned.`"
@@ -96,7 +96,7 @@ unban_1: "`Balas ke pengguna atau berikan nama pengguna untuk membatalkan banned
 unban_2: "`Saya tidak berhak membatalkan pemblokiran pengguna.`"
 unban_3: "{} **Telah diunbanned oleh** {} **di** `{}`"
 kick_1: "`Saya tidak berhak menendang pengguna.`"
-kick_2: " `Lol, saya tidak bisa Mengkick Developer saya`😂"
+kick_2: " `woi tolol, maen kick sepuh aja lu`😂"
 kick_3: "`Saya tidak bisa menendangnya...`"
 kick_4: "{} **dikick oleh** {} **di** `{}`"
 pin_1: "`Balas pesan untuk menyematkannya!`"
@@ -104,7 +104,7 @@ pinned_1: "Pesan yang Disematkan Tidak Ditemukan!"
 pinned_2: "Pesan yang Disematkan di Obrolan saat ini adalah [Lihat Disini]({})."
 unpin_1: "Balas pesan, atau, gunakan `{}unpin all`"
 listpin_1: "Tidak ada pesan yang disematkan di grup ini!"
-purge_1: "`Balas pesan yang akan dibersihkan.`"
+purge_1: "`Balas pesan goblok tolol lu.`"
 purgeall_1: "`Balas pesan seseorang untuk dihapus.`"
 purgeall_2: "Berhasil Membersihkan Semua Pesan dari {}"
 
