--- a/strings/strings/en.yml
+++ b/strings/strings/en.yml
@@ -160,7 +160,7 @@ autopic_5: "AUTOPIC Stopped!"
 
 # inline
 riz_1: "**𝙰𝚈𝚁𝙰-𝚄𝚂𝙴𝚁𝙱𝙾𝚃**"
-inline_1: "**❏ {}**\n**├ Help Inline Modules**\n**╰ Prefix :** {}"
+inline_1: "**❏ {}**\n**├ yang lu cari gak ada**\n**╰ Prefix :** {}"
 inline_2: "**{}\n\n๏ Additional : {}**"
 inline_3: "**{}\n\n๏ Additional : {}\n\n Type `.setdb ADDONS True` Then Restart.**"
 inline_4: "**❏ {}**\n**├ Help Inline Modules**\n**├ Feature :** {}\n**╰ Commands :** {}"
