--- a/strings/strings/id.yml
+++ b/strings/strings/id.yml
@@ -7,12 +7,12 @@ authors:
   - riizz
 
 # commons
-com_1: "`Sedang Coli...`"
-com_2: "`Sedang Mencari jodoh...`"
+com_1: "`Running...`"
+com_2: "`Running...`"
 com_3: "`Yang anda Masukan Tidak Valid`"
 com_4: "`Media Tidak Didukung..`"
-com_5: "`lagi donglot...`"
-com_6: "`Mengocok...`"
+com_5: "`Wait for download...`"
+com_6: "`Running...`"
 com_7: "`Maaf Telah Terjadi ERROR`"
 
 adzan1: "**Tidak Dapat Menemukan Kota** `{}`"
@@ -25,15 +25,15 @@ carbon_3: "`Berikan Warna Kustom untuk Membuat Carbon...`"
 
 # vc tools
 stvc_1: "**Maaf {} Bukan sepuh 👮**"
-stvc_2: "`Obrolan Suara Dientot...`"
-stvc_3: "`Obrolan Suara telah crot...`"
+stvc_2: "`Obrolan Suara Berhasil Di aktifkan...`"
+stvc_3: "`Obrolan Suara telah Di akhiri...`"
 vcin_1: "`Mengundang Anggota ke Obrolan Suara...`"
 vcin_2: "`{}` **Orang Berhasil diundang ke VCG**"
 vcti_1: "**Silahkan Masukan Title Obrolan Suara Grup**"
 vcti_2: "**Berhasil Mengubah Judul VCG Menjadi** `{}`"
 jovc_1: "⍟ [{}](tg://user?id={})\n\n❏ **Berhasil Bergabung Ke Obrolan Suara**\n└ **Chat ID:** `{}`"
 jovc_2: "**[ERROR]** `Karena akun sedang berada di obrolan suara`\n\n• Silahkan coba `{}joinvc` lagi"
-levc_1: "⍟ [{}](tg://user?id={})\n\n❏ **Berhasil Turun bokep sudah habis**\n└ **Chat ID:** `{}`"
+levc_1: "⍟ [{}](tg://user?id={})\n\n❏ **Berhasil Turun Dari Obrolan suara**\n└ **Chat ID:** `{}`"
 
 # chatactions
 can_1: "**#GBanned_User** Bergabung.\n\n**User** : {}\n**Karena**: {}\n\n`Pengguna dibanned.`"
@@ -86,7 +86,7 @@ pro_2: "{} **sekarang menjadi admin di** {} **dengan judul** {}"
 de_1: "`Balas ke pengguna untuk menurunkannya!`"
 de_2: "{} `bukan lagi admin di {}`"
 ban_1: "`Balas ke pengguna atau berikan nama pengguna untuk mencekalnya!`"
-ban_2: " `LoL, saya tidak bisa Mencekal Developer saya 😂`"
+ban_2: " `Sadari posisi mu ini developer`"
 ban_3: "`Saya tidak berhak membanned pengguna.`"
 ban_4: "{} **Telah dibanned oleh** {} **di** `{}`"
 ban_5: "\n**Alasan**: `{}`"
@@ -96,7 +96,7 @@ unban_1: "`Balas ke pengguna atau berikan nama pengguna untuk membatalkan banned
 unban_2: "`Saya tidak berhak membatalkan pemblokiran pengguna.`"
 unban_3: "{} **Telah diunbanned oleh** {} **di** `{}`"
 kick_1: "`Saya tidak berhak menendang pengguna.`"
-kick_2: " `woi tolol, maen kick sepuh aja lu`😂"
+kick_2: " `woi tolol, maen kick sepuh aja lu`"
 kick_3: "`Saya tidak bisa menendangnya...`"
 kick_4: "{} **dikick oleh** {} **di** `{}`"
 pin_1: "`Balas pesan untuk menyematkannya!`"
