--- a/app.json
+++ b/app.json
@@ -1,13 +1,13 @@
 {
-    "name": "Masky UserBot",
-    "description": "Masky Userbot Dibuat Untuk String Telethon Dan Pyrogram Untuk ID 5 Pasti Aman.",
-    "logo": "https://telegra.ph//file/1bbd14dc24ad0ac0b5d01.jpg",
+    "name": "Naya UserBot",
+    "description": "Naya Userbot Dibuat Untuk String Telethon Dan Pyrogram Untuk ID 5 Pasti Aman.",
+    "logo": "https://graph.org/file/60408fea8439e6702674d.jpg",
     "keywords": [
         "Telethon",
         "Pyrogram"
     ],
-    "repository": "https://github.com/mymasky/Maskyuserbot",
-    "success_url": "https://t.me/mymasky",
+    "repository": "https://github.com/naya1503/Naya-Userbot",
+    "success_url": "https://t.me/rizzvbss",
     "stack": "container",
     "env": {
         "API_ID": {
